--- a/styles/global.css
+++ b/styles/global.css
@@ -17,6 +17,11 @@
     background-image: url(../assets/img/background.jpg);
 } */
 
+.title > h1{
+    display: flex;
+    justify-content: center;
+}
+
 .global-icon {
     background-color: var(--blue-color);
     margin: 3px;
