--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,12 +1,22 @@
+footer {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
 .menu-init {
     background-color: white;
-    width: 100%;
     height: 2.5rem;
+    border: 1px solid rgba(29, 29, 29, 0.363);
 
     display: flex;
 }
 
 .init-icon {
+    height: 100%;
+    margin-top: -2px;
+    margin-left: -2px;
     border: 2px solid rgb(29, 29, 29);
     box-shadow: inset -4px -4px #adafbc;
     cursor: pointer;
@@ -18,6 +28,11 @@
 .init-icon:hover {
     background-color: rgb(213, 213, 255);
     box-shadow: inset -7px -7px #adafbc;
+}
+
+.divisor {
+    border: 1px solid rgb(29, 29, 29);
+    margin: 0.5rem;
 }
 
 .init-icon > img {
@@ -35,6 +50,34 @@
 }
 
 .github-icon > img {
-    width: 30px;
+    width: 33px;
     height: 30px;
+}
+
+.linkedin-icon {
+    margin: 5px;
+}
+
+.github-icon {
+    margin: 4px;
+}
+
+.init-decodif {
+    width: 150px;
+    padding: 8px;
+    text-align: center;
+    border: 1px solid rgba(29, 29, 29, 0.363);
+    box-shadow: inset 3px 3px #adafbc;
+    display: flex;
+}
+
+.init-decodif > p {
+    margin-left: 30px;
+    margin-top: 2px;
+}
+
+.init-datetime {
+    border: 1px solid rgba(29, 29, 29, 0.363);
+    width: 150px;
+    padding: 8px;
 }
