--- a/styles/footer.css
+++ b/styles/footer.css
@@ -77,10 +77,10 @@ footer {
 }
 
 .init-datetime {
-    border: 1px solid rgba(29, 29, 29, 0.363);
-    width: 150px;
-    padding: 1px;
+    border: 2px solid rgba(63, 63, 63, 0.548);
+    width: 110px;
     margin-left: auto;
+    margin-top: -2px;
 }
 
 .init-datetime > p {
