--- a/styles/main.css
+++ b/styles/main.css
@@ -53,6 +53,17 @@
     font-size: 20px;
 }
 
+.textarea-alert {
+    display: flex;
+    gap: 7px;
+    margin-left: 10px;
+}
+
+
+#caution {
+    width: 20px;
+}
+
 .buttons-content {
     width: 488px;
     height: 70px;
@@ -70,7 +81,7 @@
     cursor: pointer;
     width: 160px;
     height: 50px;
-    margin: 1rem;
+    margin: 0.5rem;
     
     font-size: 17px;
 }
